--- a/paru.conf
+++ b/paru.conf
@@ -26,5 +26,5 @@ DevelSuffixes = -git -cvs -svn -bzr -darcs -always
 # Binary OPTIONS
 #
 #[bin]
-FileManager = pcmanfm 
+FileManager = ranger 
 #MFlags = --skippgpcheck
