--- a/portage/intel-veriton/make.conf
+++ b/portage/intel-veriton/make.conf
@@ -8,7 +8,7 @@ CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 MAKEOPTS="-j4"
-USE="-gnome -kde -dvd pulseaudio -cdr X branding -aqua -adl -nvidia -systemd -css -a52 -ldap -3dfx -clamav -coreaudio -ios -ipod -ieee1394 -emacs -xemacs lto -emboss -dvdr -altivec -smartcard -cups -ibm -xinerama -nas -neon -quicktime graphite"
+USE="-gnome -kde -dvd pulseaudio -cdr X branding -aqua -adl -nvidia -systemd -css -a52 -ldap -3dfx -clamav -coreaudio -ios -ipod -ieee1394 -iec61883 -emacs -xemacs lto -emboss -dvdr -altivec -smartcard -cups -ibm -xinerama -nas -neon -quicktime graphite"
 ACCEPT_LICENSE="*"
 ACCEPT_KEYWORDS="~amd64"
 
